# warehouse14

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  DEV.md  DEV_LOG.md  LICENSE  README.md  local_run.py  pyproject.toml
.github/workflows/: python-integration.yml  python-package.yml  python-unittests.yml
fixtures/mypkg/: README.md  setup.cfg
scripts/: decode_session.py  upload_file.py
tests/: __init__.py  conftest.py  local_dynamodb.py  local_login.py  test_file_storage.py  test_repo_dynamo.py  test_s3_storage.py  test_simple_api.py
tests/endpoints/: __init__.py  conftest.py  test_account_token.py  test_groups.py  test_project.py  test_project_user_mgnt.py
tests/integration/: __init__.py  conftest.py  server.py  test_project_creation.py  test_project_creation_restricted.py
tests/ui/: test_project.py  test_project_user_mgnt.py
tests_integration/: conftest.py  server.py  test_project_creation.py
warehouse14/: __init__.py  forms.py  group_routes.py  login.py  models.py  pkg_helpers.py  repos.py  repos_dynamo.py  simple_api.py  storage.py
warehouse14/static/css/: materialize.css  materialize.min.css  style.css
warehouse14/static/js/: materialize.js  materialize.min.js
warehouse14/templates/: base.html  home.html
warehouse14/templates/account/: account.html  token.html
warehouse14/templates/group/: groups.html
warehouse14/templates/project/: create_project.html  project.html  project_edit.html  project_users.html  projects.html
warehouse14/templates/simple/: links.html  simple.html
