[tool.poetry]
name = "warehouse14"
version = "0.2.0"
description = "A PyPI implementation for closed groups with authentication only"
readme="README.md"
homepage="https://github.com/eruvanos/warehouse14"
repository="https://github.com/eruvanos/warehouse14"
keywords=["pypi"]
packages = [
    { include = "warehouse14" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: System :: Software Distribution",
]
authors = ["Maic Siemering <maic@siemering.tech>"]
license = "MIT"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/eruvanos/warehouse14/issues"
"Roadmap" = "https://github.com/eruvanos/warehouse14/projects/1"

[tool.poetry.dependencies]
python = "^3.8"
flask = ">=2.0.1,<4.0.0"
flask-login = "^0.6.2"
flask-httpauth = "^4.4.0"
authlib = "^1.2.0"
pypitoken = ">=6.0.3,<8.0.0"
readme-renderer = {extras = ["md"], version = ">=37.3,<44.0"}
flask-markdown = "^0.3"
pydantic = ">=1.8.2,<3.0.0"
flask-wtf = "^1.1.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pyppeteer = "^2.0.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
mirakuru = "^2.5.2"
requests-html = "^0.10.0"
moto = "^5.0.22"
freezegun = "^1.5.1"
black = "^24.8.0"
boto3 = "^1.35.68"
requests-wsgi-adapter = "^0.4.1"
boto3-stubs = {extras = ["s3", "dynamodb"], version = "^1.35.68"}
coverage = "^7.6.1"
blinker = "^1.8.2"

[tool.poetry.extras]
aws = ["boto3"]

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests require lot of memory (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
