[metadata]
name = example-pkg
version = 0.0.1
author = Example Company
author_email = support@example.com
maintainer = Example Author
maintainer_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker=http://bitbucket.org/tarek/distribute/issues/
    Discord=https://discord.example.com/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = example, package

[options]
packages = find:
python_requires = >=3.6
